updated structure paragraph

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -171,24 +171,11 @@ Additionally, studies of FOSS communities tend to suffer from an important limit
 
 Identification is the first step to rectify an undesirable dynamic before the damage is done. We want to map the dynamics of communities to real world phenomena. A community that does not manage growing pains may end up stagnating or dissolving. Managing growing pains is especially important in case of FOSS, where near half the project contributors are volunteers \cite{Forrest}. Oh et al. \cite{Oh} have argued that openness in FOSS is ``[...] generally perceived as having a positive connotation, however, the term can also be interpreted as referring to some unconstructive characteristics, such as unobstructed exit, susceptible, vulnerable, fragile, lacking effective regulation, and so on. The unobstructed exit and lack of regulatory force inherent in the OSS community can result in a community's susceptibility and vulnerability to herded exits by its participants. Commercial vendor intervention, an alternative project becoming available, and licensing issues can result in some original core members ceasing to provide their loyal service for the community, which can prompt their coworkers to leave as well'' \cite{Oh}. Identification of recipes for success or stagnation, sustainability or fragmentation may lead to a set of best practices and pitfalls.
 
-Our research proposes using temporal social network analysis to study the evolution and social dynamics of FOSS communities. With these techniques we aim to identify better measures for influence, and the shift of influence, measures associated with unhealthy group dynamics, e.g. a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork. 
-
-This paper is organized as follows: We present related literature on open source social communities. We then present the gap in the literature, and discuss why the issue needs to be addressed. After that, in methodology, we describe research goals and research questions, how data gathering, statistical modeling, and qualitative analysis are proposed to be done. In section \ref{sectionInitialStudy}, we present preliminary results of our initial study. In section \ref{timeline}, the timeline for the proposed research, and threats to validity.
-
-\section{Related Work}
-\label{relatedwork}
-
-The free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{Guzzi}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{Nakakoji}\cite{NymanForkingSustainability}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{AzarbakhtOSS2014}\cite{AzarbakhtINSNA2014}\cite{DavidsonVLHCC2014}\cite{Torres}. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
-
-Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family (i.e., FreeBSD, OpenBSD, and NetBSD, which evolved from the same codebase) found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers take part in porting per release. Additionally, They found that over 50\% of ported changes propagate to other projects within three releases \cite{Baishakhi}. This shows the amount of redundant work developers need to do to synchronize and keep up with development in parallel projects. 
-
-Visual exploration of the collaboration networks in the WebKit project was the focus of a study that aimed to observe how key events in the mobile-device industry affected the WebKit collaboration network over its lifetime. \cite{JoseWebKit} They found that \textit{coopetition} (both competition and collaboration) exists in the open source community; morover, they observed that the ``firms that played a more central role in the WebKit project such as Google, Apple and Samsung were by 2013 the leaders of the mobile-devices industry. Whereas more peripheral firms such as RIM and Nokia lost market-share'' \cite{JoseWebKit}.
-
-The study of communities has grown in popularity in part thanks to advances in social network analysis.  From the earliest works by Zachary \cite{Zachary} to the more recent works of Leskovec et al. \cite{LeskovecGraphsOverTime}\cite{LeskovecStatisticalPropertiesOfCommunityStructure}, there is a growing body of quantitative research on online communities. The earliest works on communities was done with a focus on information diffusion in a community \cite{Zachary}. The study by Zachary investigated the fission of a community; the process of communities splitting into two or more parts. They found that fission could be predicted by applying the Ford-Fulkerson min-cut algorithm \cite{Ford} on the group's communication graph; ``the unequal flow of sentiments across the ties'' and discriminatory sharing of information lead to subcommunities with more internal stability than the community as a whole.\cite{Zachary}
+Our research proposes using temporal social network analysis to study the evolution and social dynamics of FOSS communities. Specifically, we propose using a longitudinal exponential family random graph statistical model to investigate the driving forces in formation and dissolution of communities. Additionally,  to complement the statistical study, we propose doing a qualitative interview study for validating the findings. With these techniques we aim to identify better measures for influence, shifts of influence, measures associated with unhealthy group dynamics, e.g., a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork.
 
 Community splits in free and open source software development are referred to as forks, and are relatively common. Robles et al. \cite{Robles} define forking as ``when a part of a development community (or a third party not related to the project) starts a completely independent line of development based on the source code basis of the project.'' The study by Robles  et al. \cite{Robles} identified 220 significant FOSS projects that have forked over the past 30 years, and compiled a comprehensive list of the dates and reasons for forking. Table \ref{tableReasonsForForking} list their classification of forking reasosn, which we use and build on. They identified a gap in the literature in case of how the community moves when a fork occurs.''
 
-\begin{table}[!htbp]
+\begin{table}[!ht]
 \centering
 \caption{The main reasons for forking as classified by Robles and Gonzalez-Barahona \cite{Robles}}
 \label{tableReasonsForForking}
@@ -201,17 +188,31 @@ More community-driven development & Asterisk \& Callweaver \\ \hline
 Differences among developer team & Kamailio \& OpenSIPS \\ \hline
 Discontinuation of the original project & Apache web server \\ \hline
 Commercial strategy forks & LibreOffice \& OpenOffice.org \\ \hline
-Legal issues & X.Org \& XFree \\
+Legal issues & X.Org \& XFree\\
 \noalign{\smallskip}\hline
 \end{tabular}
 \end{table}
 
-\begin{figure} [!htbp]
+\begin{figure} [!ht]
 \centering
 \caption{The frequency of reasons for forking as classified by Robles and Gonzalez-Barahona \cite{Robles}}
 \label{figureReasonsForForkingPieChart}
 \epsfig{file=ForkingReasonsPieChart.png, width=\columnwidth}
 \end{figure}
+
+This paper is organized as follows: Section \ref{relatedwork} presents related literature on open source social communities, the gap in the literature, and discusses why the issue needs to be studied. 
+Then, Section \ref{ResearchGoals} presents our research objective and research questions. After that, in section \ref{methodology} presents how data gathering, statistical modeling, and qualitative analysis are proposed to be done, as well as our initial hypotheses. In section \ref{sectionInitialStudy}, we present results of our initial study. Section \ref{timeline}, shows the proposed timeline for the research and the author's graduation. And last, section \ref{threatsToValidity} we discuss the threats to validity. 
+
+\section{Related Work}
+\label{relatedwork}
+
+The free and open source software development communities have been studied extensively. Researchers have studied the social structure and dynamics of team communications \cite{Bird}\cite{Guzzi}\cite{HowisonSocialDynamics}\cite{HowisonFlossMole}\cite{Nakakoji}, identifying knowledge brokers and associated activities \cite{Sowe}, project sustainability \cite{Nakakoji}\cite{NymanForkingSustainability}, forking \cite{NymanCodeForking}, requirement satisfation \cite{Ernst}, their topology \cite{Bird}, their demographic diversity \cite{Kunegis}, gender differences in the process of joining them \cite{Kuechler}, and the role of age and the core team in their communities \cite{AzarbakhtOSS2014}\cite{AzarbakhtINSNA2014}\cite{DavidsonVLHCC2014}\cite{Torres}. Most of these studies have tended to look at community as a static structure rather than a dynamic process \cite{CrowstonFLOSSWhatWeKnow}. This makes it hard to determine cause and effect, or the exact impact of social changes.
+
+Post-forking porting of new features or bug fixes from peer projects happens among forked projects \cite{Baishakhi}. A case study of the BSD family (i.e., FreeBSD, OpenBSD, and NetBSD, which evolved from the same codebase) found that 10-15\% of lines in BSD release patches consist of ported edits, and on average 26-58\% of active developers take part in porting per release. Additionally, They found that over 50\% of ported changes propagate to other projects within three releases \cite{Baishakhi}. This shows the amount of redundant work developers need to do to synchronize and keep up with development in parallel projects. 
+
+Visual exploration of the collaboration networks in the WebKit project was the focus of a study that aimed to observe how key events in the mobile-device industry affected the WebKit collaboration network over its lifetime. \cite{JoseWebKit} They found that \textit{coopetition} (both competition and collaboration) exists in the open source community; morover, they observed that the ``firms that played a more central role in the WebKit project such as Google, Apple and Samsung were by 2013 the leaders of the mobile-devices industry. Whereas more peripheral firms such as RIM and Nokia lost market-share'' \cite{JoseWebKit}.
+
+The study of communities has grown in popularity in part thanks to advances in social network analysis.  From the earliest works by Zachary \cite{Zachary} to the more recent works of Leskovec et al. \cite{LeskovecGraphsOverTime}\cite{LeskovecStatisticalPropertiesOfCommunityStructure}, there is a growing body of quantitative research on online communities. The earliest works on communities was done with a focus on information diffusion in a community \cite{Zachary}. The study by Zachary investigated the fission of a community; the process of communities splitting into two or more parts. They found that fission could be predicted by applying the Ford-Fulkerson min-cut algorithm \cite{Ford} on the group's communication graph; ``the unequal flow of sentiments across the ties'' and discriminatory sharing of information lead to subcommunities with more internal stability than the community as a whole.\cite{Zachary}
 
 The dynamic behavior of a network and identifying key events was the aim of a study by Asur et al \cite{Asur}. They studied three DBLP co-authorship networks and defined the evolution of these networks as following one of these paths: a) Continue, b) k-Merge, c) k-Split, d) Form, or e) Dissolve. They defined four possible transformation events for individual members: 1) Appear, 2) Disappear, 3) Join, and 4) Leave. They compared groups extracted from consecutive snapshots, based on the size and overlap of every pair of groups. Then, they labeled groups with events, and used these identified events \cite{Asur}.
 
