moved forking definition to introduction

--- a/Proposal_report_Amir_ACM.tex
+++ b/Proposal_report_Amir_ACM.tex
@@ -161,9 +161,11 @@ Social networks are a ubiquitous part of our lives, and the creation of online s
 \label{introduction}
 Social networks are a ubiquitous part of our social lives, and the creation of online social communities has been a natural extension of this phenomena. Social media plays an important role in software engineering, as software developers use them to communicate, learn, collaborate and coordinate with others \cite{Storey}. Free and Open Source Software (FOSS) development efforts are prime examples of how community can be leveraged in software development, where groups are formed around communities of interest, and depend on continued interest and involvement to stay alive \cite{NymanCodeForking}.
 
-Although the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible, there are still many open questions about the social dynamics in FOSS communities. Projects may go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project may lead to forking of the project and dilution of the community. Forking, either as an acrimonious split when there is a conflict, or as a friendly divide when new features are experimentally added, affect the community \cite{Bezrukova}.
+Community splits in free and open source software development are referred to as forks, and are relatively common. Robles et al. \cite{Robles} define forking as ``when a part of a development community (or a third party not related to the project) starts a completely independent line of development based on the source code basis of the project.'' 
 
-Previous research on forking ranges from the studies of Robles et al. \cite{Robles} that identified all significant FOSS forks since 1990, to the works of Baishakhi et al. \cite{Baishakhi} on postforking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on sociotechnical dependencies in the BSD projects family \cite{Syeed}.
+Although the bulk of collaboration and communication in FOSS communities occurs online and is publicly accessible for researchers, there are still many open questions about the social dynamics in FOSS communities. Projects may go through a metamorphosis when faced with an influx of new developers or the involvement of an outside organization. Conflicts between developers' divergent visions about the future of the project may lead to forking of the project and dilution of the community. Forking, either as an acrimonious split when there is a conflict, or as a friendly divide when new features are experimentally added, affect the community \cite{Bezrukova}.
+
+Previous research on forking ranges from the study by Robles et al. \cite{Robles} that identified 220 significant FOSS projects that have forked over the past 30 years, and compiled a comprehensive list of the dates and reasons for forking (listed in Table \ref{tableReasonsForForking}), to the study by Baishakhi et al. \cite{Baishakhi} on postforking porting of new features or bug fixes from peer projects. It encompasses works of Nyman on developers' opinions about forking \cite{NymanHackersForking}, developers motivations for performing forks \cite{NymanToForkOrNotToFork}, the necessity of code forking as tool for sustainability \cite{NymanForkingSustainability}, and Syeed's work on sociotechnical dependencies in the BSD projects family \cite{Syeed}.
 
 Most existing research on forking, however, is post-hoc. It looks at the forking events in retrospect and tries to find the outcome of the fork; what happened after the fork happened; what was the cause of forking, and such. The run-up to the forking events are seldom studied. This leaves several questions unanswered: Was it a long-term trend? Was the community polarized, before forking happened? Was there a shift of influence? Did the center of gravity of the community change? What was the tipping point? Was it predictable? Is it ever predictable? We are missing that context. 
 
@@ -172,8 +174,6 @@ Additionally, studies of FOSS communities tend to suffer from an important limit
 Identification is the first step to rectify an undesirable dynamic before the damage is done. We want to map the dynamics of communities to real world phenomena. A community that does not manage growing pains may end up stagnating or dissolving. Managing growing pains is especially important in case of FOSS, where near half the project contributors are volunteers \cite{Forrest}. Oh et al. \cite{Oh} have argued that openness in FOSS is ``[...] generally perceived as having a positive connotation, however, the term can also be interpreted as referring to some unconstructive characteristics, such as unobstructed exit, susceptible, vulnerable, fragile, lacking effective regulation, and so on. The unobstructed exit and lack of regulatory force inherent in the OSS community can result in a community's susceptibility and vulnerability to herded exits by its participants. Commercial vendor intervention, an alternative project becoming available, and licensing issues can result in some original core members ceasing to provide their loyal service for the community, which can prompt their coworkers to leave as well'' \cite{Oh}. Identification of recipes for success or stagnation, sustainability or fragmentation may lead to a set of best practices and pitfalls.
 
 Our research proposes using temporal social network analysis to study the evolution and social dynamics of FOSS communities. Specifically, we propose using a longitudinal exponential family random graph statistical model to investigate the driving forces in formation and dissolution of communities. Additionally,  to complement the statistical study, we propose doing a qualitative interview study for validating the findings. With these techniques we aim to identify better measures for influence, shifts of influence, measures associated with unhealthy group dynamics, e.g., a simmering conflict, as well as early indicators of major events in the lifespan of a community. One set of dynamics we are especially interested in, are those that lead FOSS projects to fork.
-
-Community splits in free and open source software development are referred to as forks, and are relatively common. Robles et al. \cite{Robles} define forking as ``when a part of a development community (or a third party not related to the project) starts a completely independent line of development based on the source code basis of the project.'' The study by Robles  et al. \cite{Robles} identified 220 significant FOSS projects that have forked over the past 30 years, and compiled a comprehensive list of the dates and reasons for forking. Table \ref{tableReasonsForForking} list their classification of forking reasosn, which we use and build on. They identified a gap in the literature in case of how the community moves when a fork occurs.''
 
 \begin{table}[!ht]
 \centering
@@ -577,7 +577,7 @@ We visualized the dynamic network changes using Gephi \cite{Bastian}. The videos
 \begin{figure}[!Ht]
 \centering
 \epsfig{file=DiameterTime.eps, width=\columnwidth}
-\caption{Diameter changes over Time. Note that the diameter measurements were normalized to the range [0,1]}
+\caption{Diameter changes over Time. Note that the diameter measurements were normalized to the range [0,1]. The three projects in the first row belong to the \textit{``technical differences''} forking reason category, the three projects in the second row belong to the \textit{``more community-driven development''} forking reason category, and the two projects in the third row belong to the \textit{``personal differences''} forking reason category.}
 \label{figureDiameterTimeR}
 \end{figure}
 
